[package]
name = "as_bool"
version = "0.1.1"
authors = ["Jose Colon Rodriguez <jec.rod@gmail.com>"]
edition = "2018"
description = "Define how a type should be represented in a boolean context."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jecolon/as_bool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
